kubernetes/09-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-ultracloudware-net
spec:
  defaultBackend:
    service:
      name: proxy
      port:
        number: 80
  tls:
  - hosts:
    - project.ultracloudware.net
    secretName: letsencrypt-project-ultracloudware-net
  rules:
  - host: k8s.openproject-dev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy
            port:
              number: 80
